--- a/treeview/templates/list.html
+++ b/treeview/templates/list.html
@@ -27,12 +27,13 @@
 <table class='table table-condensed table-striped table-hover table-bordered'>
     {% for tree_id, count in tree_list %}
     <tr{% if '_taxonomy' in tree_id %} class="success"{% elif count == max_match_count %} class="info"{% elif max_match_count %} class="warning"{% endif %}><td>
-        <a href='/trees/{{tree_id}}'>{{tree_id}}</a>{% if max_match_count %} ({{ count }}/{{max_match_count}}){% endif %}
+        <a href='/trees/{{tree_id}}'>{{tree_id}}</a>{% if max_match_count %} (matched {{ count }}/{{max_match_count}}){% endif %}
     </td></tr>
     {% endfor %}
 </table>
 
 <div class="pagination">
+    <p>Results <strong>{{low_result}}-{{high_result}}</strong> of <strong>{{total_results}}</strong>.</p>
     <ul>
         {% for page, link in pages %}
 
