--- a/treeview/templates/list.html
+++ b/treeview/templates/list.html
@@ -30,6 +30,10 @@
     {% for tree_id, count in tree_list %}
     <tr{% if '_taxonomy' in tree_id %} class="success"{% elif count == max_match_count %} class="info"{% elif max_match_count %} class="warning"{% endif %}><td>
         <a href='/trees/{{tree_id}}'>{{tree_id}}</a>{% if max_match_count %} (matched {{ count }}/{{max_match_count}}){% endif %}
+    {% if form.taxa.value %}
+    <a href='/query/?taxa={{form.taxa.value}}&tree_id={{tree_id}}&taxonomy={{taxonomy}}' class='btn pull-right btn-{% if '_taxonomy' in tree_id %}success{% elif count == max_match_count %}primary{% else %}warning{% endif %}'>Query</a>
+    {% endif %}
+    <a href='/trees/{{tree_id}}' class='btn pull-right'>Details</a>
     </td></tr>
     {% endfor %}
 </table>
