--- a/treeview/templates/treelib_widget.html
+++ b/treeview/templates/treelib_widget.html
@@ -3,13 +3,13 @@
         <img id="loading" src="/static/loading.gif" />
 
         <div id="treeControls">
-            <img src="/static/radial.svg" onclick="draw_tree('newick', 'radial')"/>
-            <img src="/static/cladogram.svg" onclick="draw_tree('newick', 'cladogram')"/>
-            <img src="/static/rectangle.svg" onclick="draw_tree('newick', 'rectanglecladogram')"/>
-            <img src="/static/phylogram.svg" onclick="draw_tree('newick', 'phylogram')"/>
-            <img src="/static/circle.svg" onclick="draw_tree('newick', 'circle')"/>
-            <img src="/static/circlephylogram.svg" onclick="draw_tree('newick', 'circlephylogram')"/>
-            <a id="download" href-lang="image/svg+xml" href="" download="tree.svg"><img src="/static/download.svg"/></a>
+            <img src="/static/radial.svg" onclick="draw_tree('newick', 'radial')" title="radial tree"/>
+            <img src="/static/cladogram.svg" onclick="draw_tree('newick', 'cladogram')" title="cladogram"/>
+            <img src="/static/rectangle.svg" onclick="draw_tree('newick', 'rectanglecladogram')" title="rectangular cladogram"/>
+            <img src="/static/phylogram.svg" onclick="draw_tree('newick', 'phylogram')" title="phylogram"/>
+            <img src="/static/circle.svg" onclick="draw_tree('newick', 'circle')" title="circular cladogram"/>
+            <img src="/static/circlephylogram.svg" onclick="draw_tree('newick', 'circlephylogram')" title="circular phylogram"/>
+            <a id="download" href-lang="image/svg+xml" href="" download="tree.svg"><img src="/static/download.svg" title="download SVG image"/></a>
         </div>
         
         <ul id="zoomControls">
