--- a/treeview/templates/svgview.html
+++ b/treeview/templates/svgview.html
@@ -16,6 +16,8 @@
 
 {% block content %}
 
+<p>From tree <a href="/trees/{{tree_id}}/">{{tree_id}}</a>
+
 {% include "treelib_widget.html" %}
 
 <p id='message' class='muted'></p>
