Adding link to issue tracker/Google group to contact page.

--- a/phylocommons/templates/contact.html
+++ b/phylocommons/templates/contact.html
@@ -11,8 +11,15 @@
 {% block content %}
 
 <p>
-    Please send your questions or feedback to
-    <a href='mailto:ben@bendmorris.com'>Ben Morris</a>.
+    Bug reports, feature requests, or suggestions should be directed to the
+    <a href="https://github.com/bendmorris/phylocommons/issues">issue tracker on 
+    GitHub</a>. 
+</p>
+
+<p>
+    For general discussion, please use the 
+    <a href="https://groups.google.com/forum/#!forum/phylocommons">PhyloCommons 
+    Google Group</a>. 
 </p>
 
 {% endblock %}
