Adding invitation to fork/submit pull requests.

--- a/phylocommons/templates/about.html
+++ b/phylocommons/templates/about.html
@@ -35,6 +35,7 @@
         <li><a href='{% url add %}'>Submitting new trees</a></li>
         <li><a href='{% url tree_list %}'>Adding or correcting metadata on existing trees</a></li>
         <li><a href='https://github.com/bendmorris/phylocommons/issues' target='_blank'>Suggesting enhancements or reporting bugs</a></li>
+        <li><a href='https://github.com/bendmorris/phylocommons/' target='_blank'>Forking PhyloCommons on GitHub, adding new features, and submitting a pull request</a></li>
     </ul>
 </p>
 <p>
