Use the PNG logo for browser consistency.

--- a/phylocommons/templates/master.html
+++ b/phylocommons/templates/master.html
@@ -14,7 +14,7 @@
 <body>
     <div id="header">
         <div class="container">
-            <a href='/'><img src='/static/phylocommons-logo.svg' height="70px" alt='PhyloCommons' class="logo"/></a>
+            <a href='/'><img src='/static/phylocommons-logo.png' height="70px" alt='PhyloCommons' class="logo"/></a>
             <a href='/'><img src='/static/nescent_logo.png' alt='NESCent' class="nescent"/></a>
         
         
