--- a/treeview/templates/list.html
+++ b/treeview/templates/list.html
@@ -17,7 +17,12 @@
 
     <div class='input-append'>
         {{ form.taxa }}
-        {{ form.filter }}
+        <div class='input-prepend'>
+            <span class="add-on">
+                <i class="icon-question-sign" data-original-title="SPARQL triple pattern or FILTER expression used to filter resulting trees. Use the ?tree variable to refer to the potential result tree.<br/><br/>For example, to only search trees that cite a DOI: ?tree bibo:cites ?x FILTER (CONTAINS(STR(?x), 'dx.doi.org'))" data-container="body"></i>
+            </span>
+            {{ form.filter }}
+        </div>
         <button class="btn" type="submit">Search</button>
     </div>
 
@@ -56,5 +61,11 @@
 <p>No trees were found. Try a different search.</p>
 
 {% endif %}
+
+<script type="text/javascript">
+$(document).ready(function() {
+    $('i').tooltip({html:true});
+});
+</script>
 
 {% endblock %}
