--- a/treeview/templates/treelib_widget.html
+++ b/treeview/templates/treelib_widget.html
@@ -1,15 +1,15 @@
 <div id="treelib-widget">
     <div id="treeContainer" ondblclick="mouse_zoom_in(event);" oncontextmenu="mouse_zoom_out(event); return false">
-        <img id="loading" src="/static/loading.gif" />
+        <img id="loading" src="/static/img/loading.gif" />
 
         <div id="treeControls">
-            <img src="/static/radial.svg" onclick="draw_tree('newick', 'radial')" title="radial tree"/>
-            <img src="/static/cladogram.svg" onclick="draw_tree('newick', 'cladogram')" title="cladogram"/>
-            <img src="/static/rectangle.svg" onclick="draw_tree('newick', 'rectanglecladogram')" title="rectangular cladogram"/>
-            <img src="/static/phylogram.svg" onclick="draw_tree('newick', 'phylogram')" title="phylogram"/>
-            <img src="/static/circle.svg" onclick="draw_tree('newick', 'circle')" title="circular cladogram"/>
-            <img src="/static/circlephylogram.svg" onclick="draw_tree('newick', 'circlephylogram')" title="circular phylogram"/>
-            <a id="download" href-lang="image/svg+xml" href="" download="tree.svg"><img src="/static/download.svg" title="download SVG image"/></a>
+            <img src="/static/img/radial.svg" onclick="draw_tree('newick', 'radial')" title="radial tree"/>
+            <img src="/static/img/cladogram.svg" onclick="draw_tree('newick', 'cladogram')" title="cladogram"/>
+            <img src="/static/img/rectangle.svg" onclick="draw_tree('newick', 'rectanglecladogram')" title="rectangular cladogram"/>
+            <img src="/static/img/phylogram.svg" onclick="draw_tree('newick', 'phylogram')" title="phylogram"/>
+            <img src="/static/img/circle.svg" onclick="draw_tree('newick', 'circle')" title="circular cladogram"/>
+            <img src="/static/img/circlephylogram.svg" onclick="draw_tree('newick', 'circlephylogram')" title="circular phylogram"/>
+            <a id="download" href-lang="image/svg+xml" href="" download="tree.svg"><img src="/static/img/download.svg" title="download SVG image"/></a>
         </div>
         
         <ul id="zoomControls">
