--- a/treeview/templates/view.html
+++ b/treeview/templates/view.html
@@ -31,7 +31,7 @@
 
     <tr><td>Tree Viewer</td><td>
         <a href="/trees/{{tree_id}}/view">
-            <img class="img-polaroid" src='/static/rectangle.svg' width="100px" height="100px" />
+            <img class="img-polaroid" src='/static/img/rectangle.svg' width="100px" height="100px" />
         </a>
     </td></tr>
 
