--- a/phylocommons/templates/master.html
+++ b/phylocommons/templates/master.html
@@ -5,17 +5,17 @@
     <title>{% block title %}{% endblock %}</title>
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <script src="/static/jquery-1.8.1.min.js"></script>
+    <script src="/static/js/jquery-1.8.1.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
-    <link href="/static/master.css" rel="stylesheet" media="screen">
+    <link href="/static/css/master.css" rel="stylesheet" media="screen">
     {% block head %}{% endblock %}
 </head>
 
 <body>
     <div id="header">
         <div class="container">
-            <a href='/'><img src='/static/phylocommons-logo.png' height="70px" alt='PhyloCommons' class="logo"/></a>
-            <a href='/'><img src='/static/nescent_logo.png' alt='NESCent' class="nescent"/></a>
+            <a href='/'><img src='/static/img/phylocommons-logo.png' height="70px" alt='PhyloCommons' class="logo"/></a>
+            <a href='/'><img src='/static/img/nescent_logo.png' alt='NESCent' class="nescent"/></a>
         
         
             <div class="navbar">
