--- a/treeview/templates/list.html
+++ b/treeview/templates/list.html
@@ -33,7 +33,7 @@
 {% if tree_list %}
 <table class='table table-condensed table-striped table-hover table-bordered'>
     {% for tree_id, count in tree_list %}
-    <tr{% if '_taxonomy' in tree_id %} class="success"{% elif count == max_match_count %} class="info"{% elif max_match_count %} class="warning"{% endif %}><td>
+    <tr{% if '_taxonomy' in tree_id %} class="success"{% elif count == max_match_count %} class="info"{% elif count > 1 %} class="warning"{% elif max_match_count %} class="error"{% endif %}><td>
         <a href='/trees/{{tree_id}}'>{{tree_id}}</a>{% if max_match_count %} (matched {{ count }}/{{max_match_count}}){% endif %}
     <a href='/trees/{{tree_id}}' class='btn pull-right'>Details</a>
     {% if form.taxa.value and count > 1 %}
