Adding link to PhyloCommons Github page.

--- a/phylocommons/templates/home_menu.html
+++ b/phylocommons/templates/home_menu.html
@@ -1,4 +1,4 @@
 <li><a href="/">About</a></li>
 <li><a href="/contributors/">Contributors</a></li>
-<li><a href="https://github.com/bendmorris/phylocommons/" target="_blank">Source</a></li>
+<li><a href="http://code.phylocommons.org" target="_blank">Source/Project Info</a></li>
 <li><a href="/contact/">Contact</a></li>
