--- a/treeview/templates/view.html
+++ b/treeview/templates/view.html
@@ -19,7 +19,7 @@
     {% for format in formats %}
     <a href='/trees/{{tree_id}}/download?format={{format}}' class='btn'>{{format}}</a>
     {% endfor %}
-    <a href='/trees/{{tree_id}}/download?format=spp_list' class='btn'>species list</a>
+    <a href='/trees/{{tree_id}}/download?format=taxa_list' class='btn'>list of taxa</a>
     </td></tr>
     
     {% if taxa %}
