--- a/phylocommons/templates/master.html
+++ b/phylocommons/templates/master.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>{% block title %}{% endblock %}</title>
+    <link rel="icon" type="image/ico" href="/static/img/favicon.png"/>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/font-awesome.min.css" rel="stylesheet">
     <script src="/static/js/jquery-1.8.1.min.js"></script>
