Don't give validation error if taxa field is blank.

--- a/phylocommons/templates/master.html
+++ b/phylocommons/templates/master.html
@@ -68,7 +68,7 @@
     <div class="footer">
         <div class="container">
             <p class="muted credit">
-                &copy; 2013 <a href='http://www.nescent.org'>National Evolutionary Synthesis Center</a>
+                &copy; 2013 <a href='http://www.bendmorris.com'>Ben Morris</a> and the <a href='http://www.nescent.org'>National Evolutionary Synthesis Center</a>
             </p>
         </div>
     </div>
