--- a/phylocommons/templates/registration/login.html
+++ b/phylocommons/templates/registration/login.html
@@ -5,7 +5,7 @@
 {% include "home_menu.html" %}
 {% endblock %}
 
-{% block nav-user %}class="active"{% endblock %}
+{% block nav-signin %}class="active"{% endblock %}
 
 {% block content %}
 <form method="post" action=".">
