--- a/phylocommons/static/css/master.css
+++ b/phylocommons/static/css/master.css
@@ -10,12 +10,12 @@ padding:10px;
 
 #header {
 background-color: #f4f4f4;
-height:150px;
+height:160px;
 width:100%;
 }
 
 #header .navbar {
-padding:100px 0 0 0;
+clear:both;
 }
 
 #header img.logo {
@@ -25,10 +25,6 @@ font-size:43px;
 left:14px;
 vertical-align:middle;
 padding-top:20px;
-}
-
-#header img.nescent {
-float:right;
 }
 
 .blue {
@@ -71,4 +67,13 @@ background-color: #eee;
 
 .sidebar .nav{
 background:#fff;
+}
+
+.nav [class^="icon-"], .nav [class*=" icon-"] {
+margin:0 5px 0 0;
+line-height:10px;
+}
+
+.nav li {
+margin:0 5px 0 0;
 }
