I would call this alpha, not beta.

--- a/phylocommons/templates/about.html
+++ b/phylocommons/templates/about.html
@@ -17,7 +17,7 @@
     analyses.
 </p>
 <p>
-    <strong>PhyloCommons is currently in beta and therefore may change rapidly before a
+    <strong>This is an alpha release; PhyloCommons may change rapidly before a
     stable version is released.</strong> 
 </p>
 <p>
